added jwt implementation with ssl enabled